[package]
name = "gpu-profiler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-ash = ["ash"]
use-opengl = []

[dependencies]
puffin = "=0.14"
once_cell = ">=1.0"

ash = { version = "0.38", optional = true }
